fix logo.. footer is broken on mobile

--- a/web/src/styles/page-content.css
+++ b/web/src/styles/page-content.css
@@ -358,6 +358,8 @@ div.sidemenu > button.p-button {
     position: relative;
     bottom: 0px;
     height: auto !important;
+    margin-bottom: 25px !important;
+    margin-top: 25px !important;
 }
 
 #copyright > p {
